# S2

./: .gitignore  CMakeLists.txt
CLion/: CMakeLists.txt  main.c  my_lslib.c  my_lslib.h
MyTar/: CMakeLists.txt  main.c  my_tarlib.c  my_tarlib.h
bc_gitea/: bc.tar
ct/: CMakeLists.txt  main.c
cursogame/: curso  curso.c  myprog
ex01_rb/: a.py  sort.rb
ex_03/: my_csv_parser.c
ex_2/: my_data_transform  my_data_transform.c
my_bc/: CMakeLists.txt  main.c
my_bc_docode/: CMakeLists.txt  my_bc.c  my_lexer.c  my_readline.c  my_readline.h  my_token.h  nodes.h  parser.c  utils.c
my_bc_py/: CMakeLists.txt  main.c  my_lexer.c  my_lexer.h  my_readline.c  my_readline.h  my_token.c  nodes.c  nodes.h  parser.c  parser.h  utils.c
my_blockchain/: CMakeLists.txt  cmd_functions.c  functions_structures.h  main.c  my_own_functions.c  run_functions.c  run_functions.h
my_bsq/: CMakeLists.txt  New.h  Object.h  Set.c  Set.h  main.c
my_ls/: Makefile  myls  myls.c  myls_lib.c  myls_lib.h
my_readline/: CMakeLists.txt  my_readlin  my_readline  my_readline.c
my_shape/: CMakeLists.txt  Circle.c  Circle.h  main.c  rect.c  rect.h  shape.c  shape.h
my_zsh/: CMakeLists.txt  main.c  prompt.c  shell  shell.h
my_zsh_medium/: CMakeLists.txt  executor.c  executor.h  initsh.c  main.c  my_lexer.c  my_lexer.h  my_readline.c  my_split.c  my_split.h  my_token.c  my_token.h  nodes.c  nodes.h  parser.c  parser.h  prompt.c  scanner.c  scanner.h  shell.h  source.c  source.h  symtab.c  symtab.h  utils.c  utils.h
my_zsh_medium/builtins/: builtins.c  cd.c  dump.c  exit.c  setenv.c  unsetenv.c
(+100 files in other folders)
